// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test1 should get element. 1`] = `
<div>
  <h1>
    0
  </h1>
  <ul />
  <button>
    Button
  </button>
</div>
`;

exports[`test1 should get element. 2`] = `
<div>
  <h1>
    0
  </h1>
  <ul />
  <button>
    Button
  </button>
</div>
`;

exports[`test1 should get element. 3`] = `
<div>
  <h1>
    1
  </h1>
  <ul>
    <li>
      ITEM_0
    </li>
  </ul>
  <button>
    Button
  </button>
</div>
`;
